--- a/Calcolatrice.html
+++ b/Calcolatrice.html
@@ -8,8 +8,8 @@
 <h2>Calcolatrice</h2>
 
 
-<input type="number" id="numero1">
-<input type="number" id="numero2">
+<input type="text" id="numero1">
+<input type="text" id="numero2">
 <br>
 <br>
 <input type="button" value="+" onClick="somma()">
