--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 
 <head>
+  <title>SUPERMEGASITONE</title>
+</head>
+
+<body>
   <style>
     body {
       background-color: lightpink;
@@ -18,8 +22,6 @@
     }
   </style>
 </head>
-
-<body>
   <p>
   <h1>SUPERMEGASITONE</h1>
   </p>
