--- a/index.html
+++ b/index.html
@@ -20,12 +20,19 @@
       font-family: Arial, Helvetica, sans-serif;
       font-size: 20px;
     }
+    a {
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 15px;
+      color: grey
+    }
   </style>
   <p>
-  <h1>SUPERMEGASITONE</h1>
+  <h1>SUPERMEGASITONE(provvisorio)</h1>
   </p>
 
-  <a href="anagrafica1.html">es anagrafica 3.0</a>
+  <a href="anagrafica1.html">es anagrafica</a>
+  <br>
+  <br>
+  <a href="anagraficaarray1.html">es anagrafica con array</a>
 </body>
-
 </html>
