--- a/index.html
+++ b/index.html
@@ -37,5 +37,8 @@
   <br>
   <br>
   <a href="codicefiscale.html">es Espressione regolare per validare il codice fiscale</a>
+  <br>
+  <br>
+  <a href="esparagrafii.html">es realizzare una pagina web con 10 paragrafi,  e due caselle di testo. L'utente, tramite le caselle di testo, sceglie il numero di paragrafo ed il testo da inserire. Sul clic del pulsante viene aggiornato il paragrafo</a>
 </body>
 </html>
