--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     }
   </style>
   <p>
-  <h1>SUPERMEGASITONE(provvisorio)</h1>
+  <h1>Sito di Elisa scolastico(serio fr)</h1>
   </p>
 
   <a href="anagrafica1.html">es anagrafica</a>
