--- a/anagraficaarray1.html
+++ b/anagraficaarray1.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html>
 <body>
+  <style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f0f8ff; 
+    }
+
+    h4, p {
+        color: #007bff;
+    }
+
+</style>
+
 <p><h4>Pagella:</h4></p>
 
 <p>Nome:</p>
