--- a/index.html
+++ b/index.html
@@ -40,5 +40,8 @@
   <br>
   <br>
   <a href="esparagrafii.html">es realizzare una pagina web con 10 paragrafi,  e due caselle di testo. L'utente, tramite le caselle di testo, sceglie il numero di paragrafo ed il testo da inserire. Sul clic del pulsante viene aggiornato il paragrafo</a>
+  <br>
+  <br>
+  <a href="EsCambioDimensioniEColori.html">Es cambio dimensioni e colori</a>
 </body>
 </html>
