--- a/index.html
+++ b/index.html
@@ -43,5 +43,7 @@
   <br>
   <br>
   <a href="EsCambioDimensioniEColori.html">Es cambio dimensioni e colori</a>
+
+  <a href="ListaDellaSpesa1.html">Es Lista della spesa</a>
 </body>
 </html>
