--- a/index.html
+++ b/index.html
@@ -46,5 +46,8 @@
   <br>
   <br>
   <a href="ListaDellaSpesa1.html">Es Lista della spesa</a>
+  <br>
+  <br>
+  <a href="cerchiolimpici.html">Es Cerchi Olimpici</a>
 </body>
 </html>
