--- a/index.html
+++ b/index.html
@@ -49,5 +49,8 @@
   <br>
   <br>
   <a href="cerchiolimpici.html">Es Cerchi Olimpici</a>
+  <br>
+  <br>
+  <a href="tabelladinamica.html">Es tabella dinamica</a>
 </body>
 </html>
