--- a/index.html
+++ b/index.html
@@ -52,5 +52,8 @@
   <br>
   <br>
   <a href="tabelladinamica.html">Es tabella dinamica</a>
+  <br>
+  <br>
+  <a href="LeggiFile.html">Es da file csv a tabella</html></a>
 </body>
 </html>
