--- a/index.html
+++ b/index.html
@@ -55,5 +55,8 @@
   <br>
   <br>
   <a href="LeggiFile.html">Es da file csv a tabella</html></a>
+  <br>
+  <br>
+  <a href="leggifileremoto.html">Es Lettura di un file remoto csv</html></a>
 </body>
 </html>
