--- a/homeconimg.html
+++ b/homeconimg.html
@@ -16,9 +16,12 @@
             th {
                 background-color: rgb(216,191,216);
             }
+            h2{
+                color: blue;
+            }
         </style>
     </head>
-<h2>prodotti supermercato</h2>
+<h2>Prodotti supermercato</h2>
 
 <TABLE id="t1">
 <input id="percentualericarico" type="text"> 
