--- a/homeconimg.html
+++ b/homeconimg.html
@@ -12,20 +12,38 @@
                 border: 1px solid black; 
                 padding: 8px;
                 text-align: left;
+                font-family: Arial, Helvetica, sans-serif;
             }
             th {
-                background-color: rgb(216,191,216);
+                background-color: rgb(130, 136, 255);
             }
             h2{
+                font-family: Arial, Helvetica, sans-serif;
                 color: blue;
+                font-size: 25px;
+            }
+            .button {
+                background-color: #419fec; 
+                border: 2px solid #231cb2;;
+                color: rgb(0, 0, 0);
+                text-align: center;
+                display: inline-block;
+                font-size: 16px;
+                font-family: Arial, Helvetica, sans-serif;
+            }
+            p{
+                color: black;
+                font-size: 16px;
+                font-family: Arial, Helvetica, sans-serif;
             }
         </style>
     </head>
 <h2>Prodotti supermercato</h2>
 
 <TABLE id="t1">
+<p>Inserisci la percentuale di ricarico:</p>
 <input id="percentualericarico" type="text"> 
-<input id="b1" type="button" onclick="LetturaFile();" value="Stampa Tabella prodotti"> 
+<input id="b1" type="button" class="button" onclick="LetturaFile();" value="Stampa Tabella prodotti"> 
 <br> 
 
 <script>
