--- a/conversionevalute/lavoroconversionetps.html
+++ b/conversionevalute/lavoroconversionetps.html
@@ -60,7 +60,7 @@
         let tassiCambio = [];
 
         function caricaXML() {
-            const url = "xmlvalute.xml";
+            const url = "https://elisafiorenza.github.io/ElisaFiorenza/conversionevalute/xmlvalute.xml";
 
             const xhr = new XMLHttpRequest();
             xhr.open("GET", url, true);
