--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 
 <head>
@@ -30,33 +29,8 @@
   <h1>Sito di Elisa scolastico(serio fr)</h1>
   </p>
 
-  <a href="anagrafica1.html">es anagrafica</a>
+  <a href="ECommerceCannizzaro/Index.php">ECommerceCannizzaro</a>
   <br>
   <br>
-  <a href="anagraficaarray1.html">es anagrafica con array</a>
-  <br>
-  <br>
-  <a href="codicefiscale.html">es Espressione regolare per validare il codice fiscale</a>
-  <br>
-  <br>
-  <a href="esparagrafii.html">es realizzare una pagina web con 10 paragrafi,  e due caselle di testo. L'utente, tramite le caselle di testo, sceglie il numero di paragrafo ed il testo da inserire. Sul clic del pulsante viene aggiornato il paragrafo</a>
-  <br>
-  <br>
-  <a href="EsCambioDimensioniEColori.html">Es cambio dimensioni e colori</a>
-  <br>
-  <br>
-  <a href="ListaDellaSpesa1.html">Es Lista della spesa</a>
-  <br>
-  <br>
-  <a href="cerchiolimpici.html">Es Cerchi Olimpici</a>
-  <br>
-  <br>
-  <a href="tabelladinamica.html">Es tabella dinamica</a>
-  <br>
-  <br>
-  <a href="LeggiFile.html">Es da file csv a tabella</html></a>
-  <br>
-  <br>
-  <a href="leggifileremoto.html">Es Lettura di un file remoto csv</html></a>
 </body>
 </html>
