--- a/index.html
+++ b/index.html
@@ -2,36 +2,49 @@
 
 <head>
   <title>Sito di Elisa</title>
-</head>
-
-<body>
-  <style>
-    body {
-      background-color: lightpink;
-    }
-
-    h1 {
-      color: white;
-      text-align: center;
-    }
-
-    p {
-      font-family: Arial, Helvetica, sans-serif;
-      font-size: 20px;
-    }
-    a {
-      font-family: Arial, Helvetica, sans-serif;
-      font-size: 15px;
-      color: grey
-    }
-  </style>
-  <p>
-  <h1>Sito di Elisa scolastico(serio fr)</h1>
-  </p>
-
-  <a href="ECommerceCannizzaro/Index.php">ECommerceCannizzaro</a>
-  <br>
-  <br>
-  <a href="PodcastSpotify.html">Podcast spotify con stringa RSS</a>
-</body>
-</html>
+  <html>
+  
+  <head>
+    <title>Sito di Elisa Scolastico</title>
+    <style>
+      body {
+        background-color: rgb(253, 184, 119);
+        font-family: Arial, Helvetica, sans-serif;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+      }
+  
+      h1 {
+        color: rgb(245, 255, 255);
+        margin-top: 50px;
+      }
+  
+      a {
+        display: inline-block;
+        margin: 10px;
+        padding: 10px 20px;
+        background-color: rgb(133, 38, 0);
+        color: white;
+        text-decoration: none;
+        border-radius: 5px;
+        transition: background-color 0.3s;
+      }
+  
+      a:hover {
+        background-color: rgb(100, 28, 0);
+      }
+    </style>
+  </head>
+  
+  <body>
+  
+    <h1>Sito di Elisa Scolastico</h1>
+    <a href="ECommerceCannizzaro/Index.php">ECommerceCannizzaro</a>
+    <br>
+    <a href="PodcastSpotify.html">Podcast Spotify con stringa RSS</a>
+  
+  </body>
+  
+  </html>
+  
